--- a/wp-content/themes/redstarter/sass/_typography.scss
+++ b/wp-content/themes/redstarter/sass/_typography.scss
@@ -17,6 +17,9 @@ textarea {
 }
 
 /* Headings */
+h1 {
+	text-transform:uppercase;
+}
 
 h2, .entry-title a:visited, h2, .entry-title a {
 	color:#db272a;
