--- a/wp-content/themes/redstarter/sass/_footer.scss
+++ b/wp-content/themes/redstarter/sass/_footer.scss
@@ -37,8 +37,11 @@
   color:#FFF;
 }
 
-.footer-contact, p .fa-envelope, .footer-contact, p .fa-phone,
-.footer-contact li .fa-facebook-square, .footer-contact li .fa-twitter-square, .footer-contact li .fa-google-plus-square {
+.footer-contact p .fa-envelope,
+.footer-contact p .fa-phone,
+.footer-contact li .fa-facebook-square,
+.footer-contact li .fa-twitter-square,
+.footer-contact li .fa-google-plus-square {
     font-size:1.2rem;
     line-height:1.5;
     margin:0;
@@ -58,18 +61,19 @@
     padding: 30px 0 30px;
     text-align:left;
     flex-wrap:wrap;
-    flex:1 0 33%;
+    flex:1 0 25%;
 }
 
 .footer-logo {
   display:flex;
-  justify-content:space-between;
+  justify-content:center;
+  flex:1 0 50%;
 }
 
 .footer-hours {
-    text-align:right;
-    padding: 30px 0 30px;
-    flex:1 0 33%;
+    text-align:left;
+    padding: 30px 0 30px 44px;
+    flex:1 0 25%;
 }
 
 .site-info {
@@ -87,7 +91,7 @@ div .site-info a {
 
  .footer-contact h2, .footer-hours h2 {
     color: #a1a1a1;
-    font-size:1.2em;
+    font-size:1.4em;
     line-height:0;
     text-transform:uppercase;
 }
