--- a/wp-content/themes/redstarter/sass/_page-templates.scss
+++ b/wp-content/themes/redstarter/sass/_page-templates.scss
@@ -2,4 +2,38 @@
 # Page Templates
 --------------------------------------------------------------*/
 
-/* Front page */
+// taxonomy
+
+.taxonomy-description {
+      border-bottom: 1px dashed #d2d2d2;
+      padding-bottom: 1.5rem;
+
+}
+.prod-type-wrapper {
+    display:flex;
+    border-bottom: 1px dashed #d2d2d2;
+}
+
+.product-type-thumb {
+    flex: 0 1 25%;
+}
+
+.description-price {
+    flex:0 1 75%;
+    flex-direction: column;
+    display: inline-block;
+    position: relative;
+    top: -15px;
+
+}
+
+.prod-type-title a {
+  text-decoration: none;
+  font-size: 1em;
+  color: #db272a;
+  margin: 0px;
+  padding: 0px;
+  display: inline-block;
+  position: relative;
+  top:-14px;
+}
