--- a/wp-content/themes/redstarter/sass/_widgets.scss
+++ b/wp-content/themes/redstarter/sass/_widgets.scss
@@ -50,7 +50,8 @@ text-decoration: none;
 }
 
 .widget-area {
-  width: 100%;
+	padding-top:3em;
+	width: 100%;
 	border-left: solid 1px #e1e1e1;
 	display:flex;
 	flex-direction:column;
